fix: removing mobile horizontal scroll bar

--- a/src/Scss/_navBar.scss
+++ b/src/Scss/_navBar.scss
@@ -86,7 +86,7 @@
             display: none;
             flex-direction: column;
             align-items: center;
-            background-color: #fff;
+            background-color: $off-white;
             width: 200px;
             position: absolute;
             top: $navbar-height;
