--- a/src/Scss/_variables.scss
+++ b/src/Scss/_variables.scss
@@ -8,6 +8,7 @@ $brown-effects: #6B5448;
 $brown-text:#2F2E2C;
 $purple-deep: #36344D;
 $purple-lighter: #64567C;
+$off-white: #FFFAF1;
 
 /* Text */
 $font-family-main:"Italiana", sans-serif;
